# gemma-4-sql

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOY.md  DUCKDB_SUPPORT.md  EXTENDING.md  README.md  SQL_DATASET_ANALYSIS.md  USAGE.md  alpine.Dockerfile  debian.Dockerfile  distroless.Dockerfile  pyproject.toml  requirements-dev.txt  requirements-jax.txt  requirements-maxtext.txt  requirements-pytorch.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: update_badges.py
src/gemma_4_sql/: __init__.py  cli.py  tokenization.py
src/gemma_4_sql/backends/: __init__.py
src/gemma_4_sql/backends/jax/: __init__.py  agent.py  (+13 more)
src/gemma_4_sql/sdk/: __init__.py  agent.py  benchmark.py  chat.py  db_engine.py  dpo.py  duckdb_extension.py  etl.py  evaluation.py  export.py  few_shot.py  inference.py  logging.py  models.py  peft.py  protocols.py  quantize.py  rag.py  registry.py  serve.py
tests/: test_cli.py  test_cli_benchmark.py  test_import_errors.py  test_missings.py  test_missings_final_2.py  test_missings_final_5.py  test_missings_final_6.py  test_missings_final_7.py  test_missings_final_8.py  test_registry.py  test_tokenization.py
tests/backends/: test_backends.py
tests/backends/jax/: test_agent_jax.py  test_chat_jax.py  test_dpo_jax.py  test_etl_jax.py  test_evaluate_jax.py  test_export_jax.py  test_few_shot_jax.py  test_inference_jax.py  test_logging_jax.py  test_peft_jax.py  test_quantize_jax.py  test_serve_jax.py  test_train_jax.py
tests/backends/keras/: test_agent_keras.py  test_chat_keras.py  test_dpo_keras.py  test_etl_keras.py  test_etl_keras_duckdb.py  test_evaluate_keras.py  test_evaluate_keras_extra.py  test_export_keras.py  test_few_shot_keras.py  test_inference_keras.py  test_logging_keras.py  test_peft_keras.py  test_quantize_keras.py  test_serve_keras.py  test_train_keras.py
tests/backends/maxtext/: test_agent_maxtext.py  test_chat_maxtext.py  test_dpo_maxtext.py  test_etl_maxtext.py  test_etl_maxtext_duckdb.py  test_evaluate_maxtext.py  test_evaluate_maxtext_extra.py  test_export_maxtext.py  test_few_shot_maxtext.py  test_inference_maxtext.py  test_logging_maxtext.py  test_peft_maxtext.py  test_quantize_maxtext.py  test_quantize_maxtext_extra.py  test_serve_maxtext.py  test_train_maxtext.py
tests/backends/pytorch/: test_agent_pytorch.py  test_chat_pytorch.py  test_dpo_pytorch.py  test_etl_pytorch.py  test_etl_pytorch_duckdb.py  test_etl_pytorch_full.py  test_evaluate_pytorch.py  test_export_pytorch.py  test_few_shot_pytorch.py  test_inference_pytorch.py  test_logging_pytorch.py  test_peft_pytorch.py  test_quantize_pytorch.py  test_serve_pytorch.py  test_train_pytorch.py
tests/sdk/: test_agent.py  test_benchmark.py  test_chat.py  test_db_engine.py  test_db_engine_extra.py  test_dpo.py  test_duckdb_extension.py  test_etl.py  test_etl_duckdb.py  test_evaluation.py  test_export.py  test_few_shot.py  test_inference.py  test_logging.py  test_models.py  test_models_extra.py  test_peft.py  test_quantize.py  test_rag.py  test_serve.py
(+55 files in other folders)
