[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "gemma-4-sql"
version = "0.0.1"
description = "Natural text to SQL with Gemma 4; with DuckDB support and swappable-backends: PyTorch; Keras ; JAX / Bonsai; JAX / MaxText "
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
gemma-4-sql = "gemma_4_sql.cli:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
jax = ["requirements-jax.txt"]
keras = ["requirements-keras.txt"]
maxtext = ["requirements-maxtext.txt"]
pytorch = ["requirements-pytorch.txt"]
duckdb = ["requirements-duckdb.txt"]
all = ["requirements-jax.txt", "requirements-keras.txt", "requirements-maxtext.txt", "requirements-pytorch.txt", "requirements-duckdb.txt"]
default = ["requirements-jax.txt", "requirements-keras.txt", "requirements-maxtext.txt", "requirements-pytorch.txt", "requirements-duckdb.txt"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "C", "B"]
extend-ignore = ["E501", "E722", "N801", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[project.entry-points."gemma_4_sql.backends"]
jax = "gemma_4_sql.backends.jax"
keras = "gemma_4_sql.backends.keras"
maxtext = "gemma_4_sql.backends.maxtext"
pytorch = "gemma_4_sql.backends.pytorch"
